Fixed alignment of hero text

--- a/style.css
+++ b/style.css
@@ -58,12 +58,19 @@ a{
   padding: 80px 0;
   background-color: #1F2937;
   justify-content: center;
+
 }
 
 .hero .wrapper{
   padding: 40px 70px;
   gap: 32px;
   display: flex;
+  justify-content: center;
+}
+
+.left{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -98,6 +105,7 @@ a{
   color: white;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .random{
